--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.7",
     "normalize.css": "^8.0.1",
+    "papaparse": "^5.3.1",
+    "shuffle-seed": "^1.1.6",
     "vue": "^3.0.0",
     "vuex": "^4.0.2"
   },
@@ -20,7 +23,8 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "raw-loader": "^4.0.2"
   },
   "eslintConfig": {
     "root": true,
