Auto execute deploy on push to main

--- a/.github/workflows/deploy-ghpages.yml
+++ b/.github/workflows/deploy-ghpages.yml
@@ -1,5 +1,9 @@
 name: Build Vue
-on: [workflow_dispatch]
+on: 
+  workflow_dispatch:
+  push:
+    branches: 
+      - main
 jobs:
   build_vue:
     runs-on: ubuntu-latest
