--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-icons-vue": "^0.8.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.7",
     "normalize.css": "^8.0.1",
