--- a/cortex/src/main/resources/application.properties
+++ b/cortex/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/geenio
+spring.datasource.username=postgres
+spring.datasource.password=password
 
+## Spring data JPA
+# because column name `order` was messing up the queries
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.SQL=TRACE
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
