--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### Profile-specific properties files ###
+application-*.properties
+
 ### STS ###
 .apt_generated
 .apt_generated_tests
