--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap-icons-vue": "^0.8.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.7",
+    "element-plus": "^2.0.2",
     "normalize.css": "^8.0.1",
     "papaparse": "^5.3.1",
     "shuffle-seed": "^1.1.6",
@@ -31,7 +32,9 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
     "prettier": "^2.2.1",
-    "raw-loader": "^4.0.2"
+    "raw-loader": "^4.0.2",
+    "unplugin-auto-import": "^0.6.1",
+    "unplugin-vue-components": "^0.17.19"
   },
   "browserslist": [
     "> 1%",
