--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "normalize.css": "^8.0.1",
     "papaparse": "^5.3.1",
     "shuffle-seed": "^1.1.6",
-    "vue": "^3.0.0",
-    "vuex": "^4.0.2"
+    "vue": "3.2.45",
+    "vuex": "4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
